--- a/templates/game.html
+++ b/templates/game.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="../styles/game.css">
+    <script src="../js/script.js" defer></script>
     <title>Hungry Smile</title>
 </head>
 <body>
     <div class="container">
-        <div class="main">
-            <div class="main-name">
-                <h1>Hungry Smile</h1>
-                <img src="images/hungry.png" alt="" height="100" width="100">
-            </div>
-            <div class="buttons">
-                <a href="game.html"><button class="btn btn-warning">Play</button></a>
-                <a href="game.html"><button class="btn btn-warning">About</button></a>
-            </div>
+        <div class="smile">
+            <button class="btn-smile">
+                <img src="../images/angel.png" alt="" class="smileImg">
+            </button>
         </div>
+        <div class="timer"></div>
+        <h1 class="click-text">Click!</h1>
     </div>
 </body>
 </html>
