--- a/templates/game.html
+++ b/templates/game.html
@@ -19,5 +19,11 @@
         </div>
         <div class="timer"></div>
     </div>
+    <audio src="../sound/click.mp3" id="clickSound"></audio>
+    <audio src="../sound/win.mp3" id="soundWin"></audio>
+    <audio src="../sound/gameOver.mp3" id="gameOver"></audio>
+    <audio src="../sound/shipit_bombochka.mp3" id="fitelSound"></audio>
+
+
 </body>
 </html>
