--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/style.css">
+    <script src="../js/main.js" defer></script>
     <title>Hungry Smile</title>
 </head>
 <body>
@@ -16,10 +17,16 @@
                 <img src="../images/hungry.png" alt="" height="100" width="100">
             </div>
             <div class="buttons">
-                <a href="./game.html"><button class="btn btn-warning">Play</button></a>
-                <a href="./game.html"><button class="btn btn-warning">About</button></a>
+                <button class="btn btn-warning" id="btnPlay">Play</button>
+                <button class="btn btn-warning">About</button>
             </div>
         </div>
     </div>
+    <audio autoplay loop>
+        <source src="../sound/menu.mp3">
+    </audio>
+    <audio id="clickMenu">
+        <source src="../sound/clickMenu.mp3">
+    </audio>
 </body>
 </html>
